<resources>
    <string name="app_name">Adae.Chat</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="etEmail">Email</string>
    <string name="etContrasena">Contraseña</string>
    <string name="Login_login">Login</string>
    <string name="registro">Registro</string>
    <string name="Rnombre">Nombre</string>
    <string name="Rapellido">Apellido</string>
    <string name="Remail">Email</string>
    <string name="Rcontraseña">Contraseña</string>
    <string name="Rcontraseña2">Contraseña2</string>
    <string name="Rtelefono">Teléfono</string>
    <string name="Rañadir">Añadir</string>
    <string-array name="roles_array">
        <item>admin</item>
        <item>padre/madre</item>
    </string-array>
    <string name="tvContactName">Nombre del Destinatario</string>
    <string name="tvLastMessage">Último Mensaje</string>
    <string name="tvLastTimestamp">Hora del último mensaje</string>
    <string name="btnDeleteConversation">Eliminar Conversación</string>
    <string name="new_chat">New Chat</string>
    <string name="Lcontactos">Lista de Contactos</string>
    <string name="etMessage">Escribe un mensaje</string>
    <string name="btnSend">Enviar</string>
    <string name="chat">Chat</string>
    <string name="showL">Hello</string>
    <string name="tvName">Nombre de Usuario</string>
</resources>