<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_login"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/etEmail"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/etContrasena"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:autofillHints="contrasena" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/btnLogin" />

</LinearLayout>